# MoE-Infinity

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CITATIONS.md  CMakeLists.txt  MANIFEST.in  README.md  RELEASE.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build-test.yml  publish-test.yml  publish.yml
core/: AGENTS.md  CMakeLists.txt
core/aio/: archer_aio_thread.cpp  archer_aio_thread.h  archer_aio_threadpool.cpp  archer_aio_threadpool.h  archer_prio_aio_handle.cpp  archer_prio_aio_handle.h  archer_tensor_handle.cpp  archer_tensor_handle.h
core/base/: log_stream.cc
core/common/: constant.h  context.h  generator.h  pytorch.h  sync.h  types.h
core/memory/: caching_allocator.cpp  caching_allocator.h  caching_allocator_bk.h  device_caching_allocator.cpp  memory_pool.cpp  memory_pool.h  pinned_memory_pool.cpp  pinned_memory_pool.h  shared_memory.cpp  shared_memory.h  torch_caching_allocator.cpp  torch_caching_allocator.h
core/model/: fused_mlp.cu  fused_mlp.h  model_topology.cpp  model_topology.h  moe.cpp  moe.h
core/parallel/: expert_dispatcher.cpp  expert_dispatcher.h  expert_module.cpp  expert_module.h
core/prefetch/: archer_prefetch_handle.cpp  archer_prefetch_handle.h  task_scheduler.cpp  task_scheduler.h
core/python/: expert_gemm.cu  fused_glu_cuda.cu  py_archer_prefetch.cpp
core/utils/: cache.h  cuda_utils.cpp  cuda_utils.h  lockfree_queue.h  logger.h  simple_object_pool.h  threadsafe_queue.h  tqdm.h
coverage-out/cpp/: queues-coverage.html  utils-coverage.html
docker/: Dockerfile  verify_build.py
examples/: interface_example.py  readme_example.py
extensions/: CMakeLists.txt
extensions/kernel/: activation_kernels.cu  b2b_gemm.h  b2b_gemm_grouped_problem_visitor.h  b2b_mma_pipelined.h  common_device.h  dispatch_utils.h  epilogue_utils.h  fused_mlp.cu  fused_moe_mlp.cu  fused_moe_mlp.h  grouped_threadblock_swizzle.h  masked_select.h  mlp_tile_op.h  ops.h  tile_size.h  topk_softmax_kernels.cu  utils.h
extensions/test_io/: CMakeLists.txt
moe_infinity/common/: constants.py
moe_infinity/distributed/: AGENTS.md  expert_executor.py
moe_infinity/entrypoints/: big_modeling.py
moe_infinity/entrypoints/openai/: protocol.py
moe_infinity/kernel/: __init__.py  router.py
moe_infinity/memory/: AGENTS.md
moe_infinity/models/: AGENTS.md  __init__.py  deepseek.py  grok.py  mixtral.py  nllb_moe.py  qwen.py  switch_transformers.py
moe_infinity/models/modeling_arctic/: modeling_arctic.py
moe_infinity/models/modeling_deepseek/: modeling_deepseek.py
moe_infinity/models/modeling_deepseek_v2/: modeling_deepseek.py
moe_infinity/models/modeling_deepseek_v3/: modeling_deepseek.py
moe_infinity/runtime/: AGENTS.md  compile.py  model_offload.py
moe_infinity/utils/: config.py  hf_config.py
nvtx_stub/: __init__.py
tests/cpp/unittest/queues/: CMakeLists.txt  test_lockfree_queue.cpp  test_threadsafe_queue.cpp
tests/cpp/unittest/utils/: CMakeLists.txt  test_lfu_cache.cpp  test_simple_object_pool.cpp
tests/cuda/: CMakeLists.txt  test_autosize_tileload.cu  test_autosize_tileload_stage.cu  test_autotune_blocksize.cu  test_expert_fusion.cu  test_expert_fusion_v2.cu  test_fused_mlp.cu  test_fused_mlp_cutlass.cu  test_fused_mlp_wmma.cu  test_load_tile.cu  test_load_tile_templated.cu  test_single_gemm_tiled.cu  test_tile_size.cu  test_topk_softmax.cu  test_uvm_kernel.cu  tests_masked_select.cu
tests/docker/: conftest.py  run_tests.py  test_io_integration.py  test_io_module.cpp
tests/examples/: test_shift.py  test_shift.sh
tests/python/benchmark/: bench_prefill_decode_collocation.py  green_ctx.cpp  test_fused_glu_cutlass.py
tests/python/integration/: test_oai_chat_completions.py
tests/python/unit/: conftest.py  test_examples_smoke.py  test_memory_priority_score.py  test_utils_arguments.py  test_utils_checkpoints.py  test_utils_config.py  test_utils_hf_config.py
